force-app/main/default/objects/ConnexionClient__c/ConnexionClient__c.object-meta.xml
<CustomObject>
    <label>Connexion client</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connexions client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>