force-app/main/default/objects/ConnexionClient__c/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <label>Détails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>