force-app/main/default/objects/ConnexionClient__c/fields/eventDateTime__c.field-meta.xml
<CustomField>
    <fullName>eventDateTime__c</fullName>
    <label>Date et heure de l’événement</label>
    <type>DateTime</type>
</CustomField>