force-app/main/default/objects/ConnexionClient__c/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <label>Type d’évènement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connexion</fullName>
            </value>
            <value>
                <fullName>Changement MDP</fullName>
            </value>
            <value>
                <fullName>Génération MDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>