force-app/main/default/objects/ConnexionClient__c/fields/identifiant__c.field-meta.xml
<CustomField>
    <fullName>identifiant__c</fullName>
    <externalId>true</externalId>
    <label>Identifiant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>