force-app/main/default/objects/ConnexionClient__c/fields/mdpHashEncrypted__c.field-meta.xml
<CustomField>
    <fullName>mdpHashEncrypted__c</fullName>
    <label>Mot de passe (hashé)</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>