force-app/main/default/objects/ConnexionClient__c/listViews/Toutes_les_connexions_clients.listView-meta.xml
<ListView>
    <fullName>Toutes_les_connexions_clients</fullName>
    <columns>NAME</columns>
    <columns>identifiant__c</columns>
    <columns>eventDateTime__c</columns>
    <columns>eventType__c</columns>
    <columns>etat__c</columns>
    <columns>details__c</columns>
    <columns>mdpHashEncrypted__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les connexions clients</label>
    <language>fr</language>
</ListView>